need add list Customer ( <form action="/all" method="get">)

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Nataliya</title>
 </head>
 <body>
-$END$
+<h1>This page is 🇺🇦Nataliia Tarasenko🇺🇦 📌</h1>
+<h2> Nice to meet you my friend✅ </h2>
+
+<div>
+    <form action="/api"method="post">
+        <input name="name" placeholder="Имя">
+        <input name="lastname" placeholder="Фамилия">
+        <input name="data" placeholder="дата">
+        <input name="phone" placeholder="номер тлф">
+        <input name="money" placeholder="деньги">
+        <input name="place" placeholder="место">
+        <input type="submit" value="записаться">
+    </form>
+</div>
+<h2> Сheck who's coming</h2>
+<div>
+    <form action="/all" method="get">
+        <input type="submit" value="Сheck">
+
+    </form>
+</div>
+
+
 </body>
 </html>
+
+
+
