Vadim Kh   need add list Customer Table

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nataliya</title>
+    <title>Vadim</title>
 </head>
 <body>
-<h1>This page is 🇺🇦Nataliia Tarasenko🇺🇦 📌</h1>
+<h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 📌</h1>
 <h2> Nice to meet you my friend✅ </h2>
 
 <div>
@@ -19,7 +19,7 @@
         <input type="submit" value="записаться">
     </form>
 </div>
-<h2> Сheck who's coming</h2>
+<h2> 😎Сheck who's coming 😎</h2>
 <div>
     <form action="/all" method="get">
         <input type="submit" value="Сheck">
