Page Welcome Done *

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -5,7 +5,7 @@
     <title>Vadim</title>
 </head>
 <body>
-<h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 📌</h1>
+<h1> 🇺🇦Vadim Kharovyuk🇺🇦 📌</h1>
 <h2> Nice to meet you my friend✅ </h2>
 
 <div>
@@ -25,6 +25,12 @@
         <input type="submit" value="Сheck">
 
     </form>
+    <div>
+        <form action="/welcome" method="get">
+            <input type="submit" value="Welcome">
+
+        </form>
+    </div>
 </div>
 
 
