Register  Role user/admin  - done 3 контролерра работают

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -9,7 +9,7 @@
 <h2> Nice to meet you my friend✅ </h2>
 
 <div>
-    <form action="/api"method="post">
+    <form action="/welcome/api"method="post">
         <input name="name" placeholder="Имя">
         <input name="lastname" placeholder="Фамилия">
         <input name="data" placeholder="дата">
@@ -21,7 +21,7 @@
 </div>
 <h2> 😎Сheck who's coming 😎</h2>
 <div>
-    <form action="/all" method="get">
+    <form action="/welcome/api/all" method="get">
         <input type="submit" value="Сheck">
 
     </form>
