--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -9,7 +9,7 @@
 <h2> Пожалуйста  зарегистрируйтесь</h2>
 
 <div>
-    <form action="/api" method="get">
+    <form action="/welcome/api" method="get">
         <input type="submit" value="registr">
 
     </form>
