http кнопки сделал

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -21,7 +21,7 @@
 </div>
 <h2> 😎Сheck who's coming 😎</h2>
 <div>
-    <form action="/welcome/api/all" method="get">
+    <form action="/welcome/new-user/api/all" method="get">
         <input type="submit" value="Сheck">
 
     </form>
