--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vadim</title>
+    <title>Api</title>
 </head>
 <body>
 <h1> 🇺🇦Vadim Kharovyuk🇺🇦 📌</h1>
 <h2> Nice to meet you my friend✅ </h2>
 
 <div>
-    <form action="/welcome/api"method="post">
+    <form action="/welcome/new-user/api"method="post">
         <input name="name" placeholder="Имя">
         <input name="lastname" placeholder="Фамилия">
         <input name="data" placeholder="дата">
