--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -10,7 +10,7 @@
 
 <div>
     <form action="/welcome/new-user/api" method="get">
-        <input type="submit" value="registr">
+        <input type="submit" value="записаться">
 
     </form>
 
@@ -19,7 +19,7 @@
         <input name="password" placeholder="пароль">
         <input name="role" placeholder="Роль">
 
-        <input type="submit" value="записаться">
+        <input type="submit" value="регистрация">
     </form>
 </div>
 
