Lucky mega Junior

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 📌</h1>
-<h2> Пожалуйста  зарегистрируйтесь</h2>
+<h2> Пожалуйста  зарегистрируйтесь ❤️</h2>
 
 <div>
 
     <form action="/welcome"method="post">
         <input name="name" placeholder="Имя">
         <input name="password" placeholder="пароль">
-        <input name="role" placeholder="Роль">
+        <input name="role" placeholder="возраст">
 
         <input type="submit" value="регистрация">
     </form>
-    <h2> next </h2>
+    <h2> Следующий шаг 👇️ </h2>
     <form action="/welcome/new-user/api" method="get">
         <input type="submit" value="записаться">
 
