нужно сделать логАут

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -5,7 +5,7 @@
     <title>Welcome</title>
 </head>
 <body>
-<h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 📌</h1>
+<h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 </h1>
 <h2> Пожалуйста  зарегистрируйтесь ❤️</h2>
 
 <div>
@@ -17,9 +17,10 @@
 
         <input type="submit" value="регистрация">
     </form>
-    <h2> Следующий шаг 👇️ </h2>
+    <h2> Следующий шаг  👇️ </h2>
+    <h3> авторизируйтесь 📌 </h3>
     <form action="/welcome/new-user/api" method="get">
-        <input type="submit" value="записаться">
+        <input type="submit" value="авторизация">
 
     </form>
 </div>
