--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -5,7 +5,8 @@
     <title>Api</title>
 </head>
 <body>
-<h1> 🇺🇦Vadim Kharovyuk🇺🇦 📌</h1>
+
+<h1> 🇺🇦Vadim Kharovyuk🇺🇦&copy; 📌</h1>
 <h2> Nice to meet you my friend✅ </h2>
 
 <div>
@@ -19,12 +20,13 @@
         <input type="submit" value="записаться">
     </form>
 </div>
-<h2> 😎Сheck who's coming 😎</h2>
+<h2 style="color: royalblue"> 😎Сheck who's coming 😎</h2>
 <div>
     <form action="/welcome/new-user/api/all" method="get">
         <input type="submit" value="Сheck">
 
     </form>
+
     <div>
         <form action="/welcome" method="get">
             <input type="submit" value="Welcome">
@@ -32,6 +34,11 @@
         </form>
     </div>
 </div>
+<br>
+
+<footer>
+    Vadim Kharovyuk &copy;2024
+</footer>
 
 
 </body>
