--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -8,6 +8,7 @@
 <h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 </h1>
 <h2> Пожалуйста  зарегистрируйтесь ❤️</h2>
 
+
 <div>
 
     <form action="/welcome"method="post">
@@ -24,6 +25,10 @@
 
     </form>
 </div>
+<br>
+<footer>
+    Vadim Kharovyuk &copy;2024
+</footer>
 
 </body>
 </html>
