добавил кнопку выйти

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -26,13 +26,20 @@
         <input type="submit" value="Сheck">
 
     </form>
+    <br><br>
+    <form action="/welcome" method="get">
+        <input type="submit" value="Welcome">
 
+    </form>
+
+
+    <br><br>
     <div>
-        <form action="/welcome" method="get">
-            <input type="submit" value="Welcome">
-
+        <form action="/logout" method="post">
+            <input type="submit" value="Выйти">
         </form>
     </div>
+
 </div>
 <br>
 
