добавил кнопку выйти

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -15,7 +15,7 @@
         <input name="lastname" placeholder="Фамилия">
         <input name="data" placeholder="дата">
         <input name="phone" placeholder="номер тлф">
-        <input name="money" placeholder="деньги">
+<!--        <input name="money" placeholder="деньги">-->
         <input name="place" placeholder="место">
         <input type="submit" value="записаться">
     </form>
@@ -26,7 +26,7 @@
         <input type="submit" value="Сheck">
 
     </form>
-    <br><br>
+    <h4>На главную страницу </h4>
     <form action="/welcome" method="get">
         <input type="submit" value="Welcome">
 
