--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -28,7 +28,9 @@
     </form>
 
 </div>
-<br>
+<br><br>
+<img src="https://izvestia.kharkov.ua/wp-content/uploads/2022/04/photo_2022-04-12_12-37-39-1.jpg">
+<br><br>
 <footer>
     Vadim Kharovyuk &copy;2024
 </footer>
