--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -29,7 +29,7 @@
 
 </div>
 <br><br>
-<img src="https://izvestia.kharkov.ua/wp-content/uploads/2022/04/photo_2022-04-12_12-37-39-1.jpg">
+<img src="https://images.izi.ua/180958173">
 <br><br>
 <footer>
     Vadim Kharovyuk &copy;2024
