верхний подвал done

--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+
 </head>
 <body>
+<nav>
+    <a href="/welcome/new-user/api/all"> All</a>
+    <a href=""> Profile</a>
+    <a href=""> Contact</a>
+    <span></span>
+</nav>
 <h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 </h1>
 <h2> Пожалуйста  зарегистрируйтесь ❤️</h2>
 
@@ -32,7 +39,7 @@
 <img src="https://images.izi.ua/180958173">
 <br><br>
 <footer>
-    Vadim Kharovyuk &copy;2024
+    Vadim Kharovyuk 1993-2024 &copy;
 </footer>
 
 </body>
