верхиний подвал нужно регистрацыя

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Api</title>
+    <title>Запись на Встречу</title>
 </head>
 <body>
+<nav>
+    <a href="/welcome" > Home</a>
+    <a href="/welcome/new-user/api"> Войти </a>
+    <a href=""> Зарегистрироваться </a>
+
+    <span></span>
+</nav>
 
 <h1> 🇺🇦Vadim Kharovyuk🇺🇦&copy; 📌</h1>
 <h2> Nice to meet you my friend✅ </h2>
@@ -15,7 +22,6 @@
         <input name="lastname" placeholder="Фамилия">
         <input name="data" placeholder="дата">
         <input name="phone" placeholder="номер тлф">
-<!--        <input name="money" placeholder="деньги">-->
         <input name="place" placeholder="место">
         <input type="submit" value="записаться">
     </form>
