--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <title>Welcome </title>
 
 </head>
 <body>
 <nav>
-    <a href="/welcome/new-user/api/all"> All</a>
-    <a href=""> Profile</a>
-    <a href=""> Contact</a>
+    <a href="welcome" > Home</a>
+    <a href="welcome/new-user/api"> Войти </a>
+    <a href=""> Зарегистрироваться </a>
+
     <span></span>
 </nav>
 <h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 </h1>
@@ -26,13 +27,13 @@
         <input type="submit" value="регистрация">
     </form>
 
-    <h2> Следующий шаг  👇️ </h2>
-    <h3> авторизируйтесь 📌 </h3>
-    <form action="/welcome/new-user/api" method="get">
-        <input type="submit" value="авторизация">
+<!--    <h2> Следующий шаг  👇️ </h2>-->
+<!--    <h3> авторизируйтесь 📌 </h3>-->
+<!--    <form action="/welcome/new-user/api" method="get">-->
+<!--        <input type="submit" value="авторизация">-->
 
 
-    </form>
+<!--    </form>-->
 
 </div>
 <br><br>
