--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -8,7 +8,7 @@
 <nav>
     <a href="/welcome" > Home</a>
     <a href="/welcome/new-user/api"> Войти </a>
-    <a href=""> Зарегистрироваться </a>
+    <a href="/registration"> Зарегистрироваться </a>
 
     <span></span>
 </nav>
@@ -30,13 +30,6 @@
 <div>
     <form action="/welcome/new-user/api/all" method="get">
         <input type="submit" value="Сheck">
-
-    </form>
-    <h4>На главную страницу </h4>
-    <form action="/welcome" method="get">
-        <input type="submit" value="Welcome">
-
-    </form>
 
 
     <br><br>
