--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <nav>
-    <a href="welcome" > Home</a>
-    <a href="welcome/new-user/api"> Войти </a>
-    <a href=""> Зарегистрироваться </a>
+    <a href="/welcome" > Home</a>
+    <a href="/welcome/new-user/api"> Войти </a>
+    <a href="/registration"> Зарегистрироваться </a>
 
     <span></span>
 </nav>
@@ -19,13 +19,12 @@
 
 <div>
 
-    <form action="/welcome"method="post">
-        <input name="name" placeholder="Имя">
-        <input name="password" placeholder="пароль">
-        <input name="role" placeholder="возраст">
+<!--    <form action="/welcome"method="post">-->
+<!--        <input name="name" placeholder="Имя">-->
+<!--        <input name="password" placeholder="пароль">-->
+<!--        <input type="submit" value="регистрация">-->
+<!--    </form>-->
 
-        <input type="submit" value="регистрация">
-    </form>
 
 <!--    <h2> Следующий шаг  👇️ </h2>-->
 <!--    <h3> авторизируйтесь 📌 </h3>-->
