--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -10,6 +10,7 @@
     <a href="/welcome" > Home</a>
     <a href="/welcome/new-user/api"> Войти </a>
     <a href="/registration"> Зарегистрироваться </a>
+    <a href="/logout">Выйти</a>
 
     <span></span>
 </nav>
@@ -17,24 +18,7 @@
 <h2> Пожалуйста  зарегистрируйтесь ❤️</h2>
 
 
-<div>
 
-<!--    <form action="/welcome"method="post">-->
-<!--        <input name="name" placeholder="Имя">-->
-<!--        <input name="password" placeholder="пароль">-->
-<!--        <input type="submit" value="регистрация">-->
-<!--    </form>-->
-
-
-<!--    <h2> Следующий шаг  👇️ </h2>-->
-<!--    <h3> авторизируйтесь 📌 </h3>-->
-<!--    <form action="/welcome/new-user/api" method="get">-->
-<!--        <input type="submit" value="авторизация">-->
-
-
-<!--    </form>-->
-
-</div>
 <br><br>
 <img src="https://images.izi.ua/180958173">
 <br><br>
