--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -33,7 +33,10 @@
     <form action="/welcome/new-user/api/all" method="get">
         <input type="submit" value="Сheck">
     </form>
-
+<br>
+<br>
+<img src="https://scontent-bom1-2.xx.fbcdn.net/v/t1.6435-9/69283326_2360386174278898_987957729232420864_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=be3454&_nc_ohc=iWWfFfvJhkoAX_XXF5L&_nc_ht=scontent-bom1-2.xx&oh=00_AfDqfYzL1WC4OM6DbzZU7sz5Lt8iOHXh2a4lep6t8O1BfA&oe=65F60D92">
+<br><br>
 
 <div>
     <footer>
