--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -3,18 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome </title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 </head>
-<body>
-<nav>
-    <a href="/welcome" > Home</a>
-    <a href="/welcome/new-user/api"> Войти </a>
-    <a href="/registration"> Зарегистрироваться </a>
-    <a href="/logout">Выйти</a>
 
-    <span></span>
+<body>
+<!--<nav>-->
+<!--    <a href="/welcome" > Home</a>-->
+<!--    <a href="/welcome/new-user/api"> Войти </a>-->
+
+<!--    <a href="/registration"> Зарегистрироваться </a>-->
+<!--    <a href="/logout">Выйти</a>-->
+
+<!--    <span></span>-->
+<!--</nav>-->
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/welcome">Главная страница</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/registration">Зарегистрироваться</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/welcome/new-user/api">Войти</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Выйти</a>
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
 </nav>
+<br><br><br>
+
 <h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 </h1>
 <h2> Пожалуйста  зарегистрируйтесь ❤️</h2>
 
