--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,52 +7,25 @@
 
 </head>
 
-<body>
-<!--<nav>-->
-<!--    <a href="/welcome" > Home</a>-->
-<!--    <a href="/welcome/new-user/api"> Войти </a>-->
+<body class="d-flex h-100 text-center text-bg-dark">
+<header th:insert="block/header::header"> </header>
 
-<!--    <a href="/registration"> Зарегистрироваться </a>-->
-<!--    <a href="/logout">Выйти</a>-->
 
-<!--    <span></span>-->
-<!--</nav>-->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/welcome">Главная страница</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/registration">Зарегистрироваться</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/welcome/new-user/api">Войти</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Выйти</a>
-                </li>
-
-            </ul>
-
-        </div>
-    </div>
-</nav>
 <br><br><br>
+<div><br><br>
 
-<h1>This page is 🇺🇦Vadim Kharovyuk🇺🇦 </h1>
-<h2> Пожалуйста  зарегистрируйтесь ❤️</h2>
+    <h1>🇺🇦Vadim Kharovyuk🇺🇦 </h1>
+    <h2> Пожалуйста  зарегистрируйтесь ❤️</h2>
+
+</div>
 
 
 
 <br><br>
 <img src="https://images.izi.ua/180958173">
-<br><br>
-<footer>
-    Vadim Kharovyuk 1993-2024 &copy;
-</footer>
 
+
+<div th:insert="block/foter :: foter"></div>
 </body>
+
 </html>
