--- a/src/main/resources/templates/table-list.html
+++ b/src/main/resources/templates/table-list.html
@@ -1,61 +1,67 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Гости</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!DOCTYPE html>
+    <html xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8">
+        <title>Гости</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-</head>
+    </head>
 
-<body>
-<header th:insert="block/header::header"> </header>
+    <body>
+    <header th:insert="block/header::header"> </header>
 
-<div class="container">
-    <div class="row">
-        <h1> Список гостей</h1>
-    </div>
+    <div class="container">
+        <div class="row">
+            <h1> Список гостей</h1>
+        </div>
 
-    <div class="row">
+        <div class="row">
 
-    </div>
-    <table class="table table-striped table-bordered ">
-        <thead class="table-dark">
+        </div>
+        <table class="table table-striped table-bordered ">
+            <thead class="table-dark">
+            <tr>
+                <th> Name</th>
+                <th>  Last Name</th>
+                <th>  Data</th>
+                <th>  Phone</th>
+                <th>  Place</th>
+                <th> Action</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <tr th:each ="List:${customerList}">
+                <td th:text="${List.getName()}"></td>
+                <td th:text="${List.getLastname()}"></td>
+                <td th:text="${List.getData()}"></td>
+                <td th:text="${List.getPhone()}"></td>
+                <td th:text="${List.getPlace()}"></td>
+
+    <!--            <td>-->
+    <!--                <a th:href="@{/student/edit/{id}(id=${student.getId()})}"-->
+    <!--                   class="btn btn-primary"> Update</a>-->
+
+                <td>
+                       <a th:href="@{/welcome/new-user/api/all/{id}(id=${List.getId()})}"
+                       class="btn btn-danger">Удалить</a>
+
+                </td>
+
+            </tr>
+
+            </tbody>
+
+        </table>
         <tr>
-            <th> Name</th>
-            <th>  Last Name</th>
-            <th>  Data</th>
-            <th>  Phone</th>
-            <th>  Place</th>
-            <th> Action</th>
+            <form action="/welcome/new-user/api" method="get">
+                <input type="submit" value="back">
+            </form>
         </tr>
-        </thead>
+    </div>
 
-        <tbody>
-        <tr th:each ="List:${customerList}">
-            <td th:text="${List.getName()}"></td>
-            <td th:text="${List.getLastname()}"></td>
-            <td th:text="${List.getData()}"></td>
-            <td th:text="${List.getPhone()}"></td>
-            <td th:text="${List.getPlace()}"></td>
 
-<!--            <td>-->
-<!--                <a th:href="@{/student/edit/{id}(id=${student.getId()})}"-->
-<!--                   class="btn btn-primary"> Update</a>-->
-
-<!--                <a th:href="@{/student/{id}(id=${student.getId()})}"-->
-            <td>
-                   <a th:href="@{/welcome/new-user/api/all/{id}(id=${List.getId()})}"
-                   class="btn btn-danger">Удалить</a>
-
-            </td>
-
-        </tr>
-        </tbody>
-
-    </table>
-</div>
-
-<div th:insert="block/foter :: foter"></div>
-</body>
-</html>
+    <div th:insert="block/foter :: foter"></div>
+    </body>
+    </html>
