--- a/src/main/resources/templates/block/foter.html
+++ b/src/main/resources/templates/block/foter.html
@@ -1,6 +1,6 @@
 <div th:fragment="foter">
     <footer class="mt-auto text-white-50">
-        <p><a href="https://getbootstrap.com/" class="text-white">Vadim Kharovyuk 1993-2024  &copy; </a></p>
+        <p><a href="https://www.facebook.com/profile.php?id=100009226154613" class="text-white">Vadim Kharovyuk 1993-2024  &copy; </a></p>
     </footer>
 
 </div>
