--- a/src/main/resources/templates/block/header.html
+++ b/src/main/resources/templates/block/header.html
@@ -13,10 +13,13 @@
                             <a class="nav-link active" aria-current="page" href="/registration">Зарегистрироваться</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/welcome/new-user/api">Войти</a>
+                            <a class="nav-link active" aria-current="page" href="/welcome/new-user/api">Войти</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/logout">Выйти</a>
+                            <a class="nav-link active" aria-current="page" href="/logout">Выйти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/blog">Мой Блог</a>
                         </li>
 
                     </ul>
