--- a/src/main/resources/templates/block/header.html
+++ b/src/main/resources/templates/block/header.html
@@ -21,6 +21,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/blog">Мой Блог</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/blog/add">Добавить Статью</a>
+                        </li>
 
                     </ul>
 
