--- a/src/main/resources/templates/block/header.html
+++ b/src/main/resources/templates/block/header.html
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/info">Про меня </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/task">Мои задания </a>
+                        </li>
 
                     </ul>
 
