--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,40 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Reg</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Please Log In</title>
+</head>
 <body>
-
-<form action="/login" method="post">
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-
-
-        <input type="text" class="form-control" id="floatingInput" >
-        <label for="floatingInput"> login </label>
-
-
-
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-        <label for="floatingPassword">Password</label>
-
-
-    <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-
+<h1>Please Log In</h1>
+<div th:if="${param.error}">
+    Invalid username and password.</div>
+<div th:if="${param.logout}">
+    You have been logged out.</div>
+<form th:action="@{/login}" method="post">
+    <div>
+        <input type="text" name="username" placeholder="Username"/>
+    </div>
+    <div>
+        <input type="password" name="password" placeholder="Password"/>
+    </div>
+    <input type="submit" value="Log in" />
 </form>
-<!--<h3>Авторизация </h3>-->
-<!--<form action="/login" method="post">-->
-<!--    Эл. почта: <input type="text" name="username"><br><br>-->
-<!--    Пароль: <input type="password" name="password"><br><br>-->
-<!--    <input type="hidden" name="_csrf" value="${_csrf.token}">-->
-
-<!--    <input type="submit" value="Вход"/>-->
-<!--    <br>-->
-<!--    <br>-->
-<!--</form>-->
-<!--<a href="/registration">Зарегистрироваться</a>-->
-
+<a href="/registration"> регистрация</a>
 </body>
-<br><br>
-
 </html>
