--- a/src/main/resources/templates/mainLog.html
+++ b/src/main/resources/templates/mainLog.html
@@ -30,7 +30,7 @@
             <div>
                 <input type="password" name="password" placeholder="Password"/>
             </div>
-            <input type="submit" value="Войти" />
+            <input type="submit" value="Log in" />
         </form>
         <a href="/registration"> регистрация</a>
 
@@ -39,11 +39,14 @@
 
 
 
-    <div th:insert="block/foter :: foter"></div>
 </main>
 
 
 
 
+
+
+<div th:insert="block/foter :: foter"></div>
+<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
