--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Info </title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body class="d-flex h-100 text-center text-bg-dark">
 <header th:insert="block/header::header"> </header>
 
+<div>
+    <img src="https://scontent-bom2-2.xx.fbcdn.net/v/t1.18169-9/21768188_1890024767981710_3983062433439988987_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=dd63ad&_nc_ohc=zAVJjLBPdjEAX8RTk8q&_nc_ht=scontent-bom2-2.xx&oh=00_AfD6A0gBSvp_XbuR2EVwPaC_NQ7CTaAAO4sFi-waMSHJfA&oe=66048B51"
+         height="700" width="550">
 
-    <img src="https://scontent-bom1-2.xx.fbcdn.net/v/t1.6435-9/69283326_2360386174278898_987957729232420864_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=be3454&_nc_ohc=sHP2-Xi10MIAX8rS1bj&_nc_ht=scontent-bom1-2.xx&oh=00_AfDM1LqBUbI8N9YEZAK3O7zHN6iulosn3EwwJP7We3MSEA&oe=65FCA512"
-         height="500" width="400">
+
+</div>
 
 <div >
     <p>
@@ -21,10 +23,41 @@
     <br>
         <h1> Vadim Kharovyuk</h1>
         <br>
-        Харовюк Вадим Андреевич( род. 19 ноября 1993, Харьков) — украинский государственный и политический деятель. Городской голова Харькова с 11 ноября 2021 года. Исполняющий обязанности городского головы Харькова (17 декабря 2020 — 11 ноября 2021). Заслуженный экономист Украины (2007), кандидат наук по государственному управлению (2007).
-
-        Депутат Харьковского городского совета (2015—2021), председатель фракции партии «Блок Кернеса — Успешный Харьков»[3], секретарь Харьковского городского совета (9 декабря 2020 — 11 ноября 2021).
+    public Vadim() {<br>
+    this.name = Vadim ;<br>
+    this.LastName = Kharovyuk;<br>
+    this.dayOfbirsday = 19 November 1993;<br>
+    this.age = 30;<br>
+    this.numberPhone = +38(063)843-85-65;<br>
+    this.Email = Harovyuk.vadim@icloud.com;<br>
+    }
     </p>
+    <div>
+        <p>
+            <br>
+            public Education() {<br>
+            this.University = Khakovsky National Pedagogical University GS Skovoroda  <br>
+            }
+
+        </p>
+
+    </div>
+    <br>
+    <div>
+        <p><br>
+
+            public Skills(){<br>
+            Java /Docker /PostgreSQL /Spring /Git /Maven<br>
+            }
+
+        </p>
+
+    </div>
+    <br>
+
+
+
+
     <br>
     <br>
     <form action="/welcome" method="get">
