change Page Info

--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -47,7 +47,7 @@
         <p><br>
 
             public Skills(){<br>
-            Java /Docker /PostgreSQL /Spring /Git /Maven<br>
+            Java /Docker /PostgreSQL /Spring /Git /Maven/OOP/HTML/ CSS <br>
             }
 
         </p>
