--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -21,8 +21,8 @@
                     <div>
                         <div>
                             <div>
-                                <h1 style="color: #f1a680"> Vadim  </h1>
-                                <h1 style="color: #ecdcdc"> Kharovyuk  </h1>
+                                <h1  class="h1" style="color: #f1a680"> Vadim  </h1>
+                                <h1 class="h2" style="color: #ecdcdc"> Kharovyuk  </h1>
                             </div>
                         </div>
 
@@ -67,8 +67,12 @@
 
     <br>
     <br>
-    <img src="https://scontent-bom1-2.xx.fbcdn.net/v/t39.30808-6/391735087_3572327643084739_6528600897403342532_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=dd5e9f&_nc_ohc=kXpXxkSTbO8AX99koiW&_nc_ht=scontent-bom1-2.xx&oh=00_AfCXDVbCm4pa6iER1kj0khAzgXz2RYUMXnX0oh0bMBlttA&oe=65D5CCBA"
-         width="720" height="950" >
+    <img src="/static/pic/logo.jpg"
+         width="850"
+         height="950" alt="logo">
+
+
+
     <br><br>
 
 
