--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,16 +87,16 @@
     <br>
     <br>
 
-    <h2>Login </h2>
+    <h2>Войти </h2>
     <form action="/login" method="post">
-        <label for="username">Username:</label>
+        <label for="username">Имя:</label>
         <input type="text" id="username" name="username" required>
-        <label for="password">Password:</label>
+        <label for="password">Пароль:</label>
         <input type="password" id="password" name="password" required>
-        <button type="submit">Login</button>
+        <button type="submit">Войти</button>
     </form>
     <div class="register-link">
-        <a href="/registration">Register</a>
+        <a href="/registration">Регистрация</a>
     </div>
 </div>
 </body>
