--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -4,7 +4,59 @@
     <meta charset="UTF-8">
     <title>Регистрация </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<style>
+    button {
+        --glow-color: rgb(217, 176, 255);
+        --glow-spread-color: rgba(191, 123, 255, 0.781);
+        --enhanced-glow-color: rgb(231, 206, 255);
+        --btn-color: rgb(100, 61, 136);
+        border: .25em solid var(--glow-color);
+        padding: 1em 3em;
+        color: var(--glow-color);
+        font-size: 15px;
+        font-weight: bold;
+        background-color: var(--btn-color);
+        border-radius: 1em;
+        outline: none;
+        box-shadow: 0 0 1em .25em var(--glow-color),
+        0 0 4em 1em var(--glow-spread-color),
+        inset 0 0 .75em .25em var(--glow-color);
+        text-shadow: 0 0 .5em var(--glow-color);
+        position: relative;
+        transition: all 0.3s;
+    }
 
+    button::after {
+        pointer-events: none;
+        content: "";
+        position: absolute;
+        top: 120%;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: var(--glow-spread-color);
+        filter: blur(2em);
+        opacity: .7;
+        transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
+    }
+
+    button:hover {
+        color: var(--btn-color);
+        background-color: var(--glow-color);
+        box-shadow: 0 0 1em .25em var(--glow-color),
+        0 0 4em 2em var(--glow-spread-color),
+        inset 0 0 .75em .25em var(--glow-color);
+    }
+
+    button:active {
+        box-shadow: 0 0 0.6em .25em var(--glow-color),
+        0 0 2.5em 2em var(--glow-spread-color),
+        inset 0 0 .5em .25em var(--glow-color);
+    }
+    .regMain{
+        color: #4b0bab;
+    }
+</style>
 </head>
 
         <body class="d-flex h-100 text-center text-bg-dark">
@@ -15,7 +67,7 @@
     <br>
     <br>
     <br>
-        <h1 style="text-align: center">Регистрация</h1>
+        <h1 class="regMain" style="text-align: center" >Регистрация</h1>
         <hr>
         <form action="/welcome" method="post">
             <div class="form-group">
@@ -30,7 +82,7 @@
             </div>
             <br>
 
-            <button type="submit" style="width: 100%" class="btn btn-dark">Зарегистрироваться</button>
+            <button type="submit" >Зарегистрироваться</button>
         </form>
         <br>  <br>  <br>
         <br>  <br>  <br>
