--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
     <style>
+
         .glowbutton {
             --glow-color: rgb(176, 252, 255);
             --glow-spread-color: rgba(123, 251, 255, 0.781);
@@ -136,7 +137,7 @@
     <br>
     <br>
 
-    <h2>Войти </h2>
+    <h2 style="color: aquamarine">Войти </h2>
     <form action="/login" method="post">
         <label for="username">Имя:</label>
         <input type="text" id="username" name="username" required>
