--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -4,7 +4,64 @@
         <meta charset="UTF-8">
         <title>Запись на Встречу</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<style>
+    .button {
+        position: relative;
+        width: 120px;
+        height: 40px;
+        background-color: #000;
+        display: flex;
+        align-items: center;
+        color: white;
+        flex-direction: column;
+        justify-content: center;
+        border: none;
+        padding: 12px;
+        gap: 12px;
+        border-radius: 8px;
+        cursor: pointer;
+    }
 
+    .button::before {
+        content: '';
+        position: absolute;
+        inset: 0;
+        left: -4px;
+        top: -1px;
+        margin: auto;
+        width: 128px;
+        height: 48px;
+        border-radius: 10px;
+        background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100% );
+        z-index: -10;
+        pointer-events: none;
+        transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+
+    .button::after {
+        content: "";
+        z-index: -1;
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
+        transform: translate3d(0, 0, 0) scale(0.95);
+        filter: blur(20px);
+    }
+
+    .button:hover::after {
+        filter: blur(30px);
+    }
+
+    .button:hover::before {
+        transform: rotate(-180deg);
+    }
+
+    .button:active::before {
+        scale: 0.7;
+    }
+
+
+</style>
     </head>
 
     <body class="d-flex h-100 text-center text-bg-dark">
@@ -55,7 +112,9 @@
                 <br>
                 <br>
                 <form action="/welcome/new-user/api/all" method="get">
-                    <input type="submit" value="Сheck">
+                    <button class="button" type="submit">
+                        Check
+                    </button>
                 </form>
             </div>
         </div>
