--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -1,99 +1,205 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Регистрация </title>-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
+<!--<style>-->
+<!--    button {-->
+<!--        &#45;&#45;glow-color: rgb(217, 176, 255);-->
+<!--        &#45;&#45;glow-spread-color: rgba(191, 123, 255, 0.781);-->
+<!--        &#45;&#45;enhanced-glow-color: rgb(231, 206, 255);-->
+<!--        &#45;&#45;btn-color: rgb(100, 61, 136);-->
+<!--        border: .25em solid var(&#45;&#45;glow-color);-->
+<!--        padding: 1em 3em;-->
+<!--        color: var(&#45;&#45;glow-color);-->
+<!--        font-size: 15px;-->
+<!--        font-weight: bold;-->
+<!--        background-color: var(&#45;&#45;btn-color);-->
+<!--        border-radius: 1em;-->
+<!--        outline: none;-->
+<!--        box-shadow: 0 0 1em .25em var(&#45;&#45;glow-color),-->
+<!--        0 0 4em 1em var(&#45;&#45;glow-spread-color),-->
+<!--        inset 0 0 .75em .25em var(&#45;&#45;glow-color);-->
+<!--        text-shadow: 0 0 .5em var(&#45;&#45;glow-color);-->
+<!--        position: relative;-->
+<!--        transition: all 0.3s;-->
+<!--    }-->
+
+<!--    button::after {-->
+<!--        pointer-events: none;-->
+<!--        content: "";-->
+<!--        position: absolute;-->
+<!--        top: 120%;-->
+<!--        left: 0;-->
+<!--        height: 100%;-->
+<!--        width: 100%;-->
+<!--        background-color: var(&#45;&#45;glow-spread-color);-->
+<!--        filter: blur(2em);-->
+<!--        opacity: .7;-->
+<!--        transform: perspective(1.5em) rotateX(35deg) scale(1, .6);-->
+<!--    }-->
+
+<!--    button:hover {-->
+<!--        color: var(&#45;&#45;btn-color);-->
+<!--        background-color: var(&#45;&#45;glow-color);-->
+<!--        box-shadow: 0 0 1em .25em var(&#45;&#45;glow-color),-->
+<!--        0 0 4em 2em var(&#45;&#45;glow-spread-color),-->
+<!--        inset 0 0 .75em .25em var(&#45;&#45;glow-color);-->
+<!--    }-->
+
+<!--    button:active {-->
+<!--        box-shadow: 0 0 0.6em .25em var(&#45;&#45;glow-color),-->
+<!--        0 0 2.5em 2em var(&#45;&#45;glow-spread-color),-->
+<!--        inset 0 0 .5em .25em var(&#45;&#45;glow-color);-->
+<!--    }-->
+<!--    .regMain{-->
+<!--        color: #4b0bab;-->
+<!--    }-->
+<!--</style>-->
+<!--</head>-->
+
+<!--        <body class="d-flex h-100 text-center text-bg-dark">-->
+<!--    <header th:insert="block/header::header"> </header>-->
+
+
+<!--    <main class="form-signin w-45 m-auto">-->
+<!--    <br>-->
+<!--    <br>-->
+<!--    <br>-->
+<!--        <h1 class="regMain" style="text-align: center" >Регистрация</h1>-->
+<!--        <hr>-->
+<!--        <form action="/welcome" method="post">-->
+<!--            <div class="form-group">-->
+<!--                <label for="name">Имя пользователя</label>-->
+<!--                <input type="text" class="form-control" required id="name" name="name">-->
+<!--            </div>-->
+
+
+<!--            <div class="form-group">-->
+<!--                <label for="password">Пароль</label>-->
+<!--                <input type="password" class="form-control" id="password" required name="password">-->
+<!--            </div>-->
+<!--            <br>-->
+
+<!--            <button type="submit" >Зарегистрироваться</button>-->
+<!--        </form>-->
+<!--        <br>  <br>  <br>-->
+<!--        <br>  <br>  <br>-->
+<!--        <br>  <br>  <br>-->
+<!--        <br>  <br>  <br>-->
+<!--    </main>-->
+<!--    <div th:insert="block/foter :: foter"></div>-->
+<!--    <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>-->
+
+
+
+<!--    </body>-->
+
+<!--    </html>-->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Регистрация </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<style>
-    button {
-        --glow-color: rgb(217, 176, 255);
-        --glow-spread-color: rgba(191, 123, 255, 0.781);
-        --enhanced-glow-color: rgb(231, 206, 255);
-        --btn-color: rgb(100, 61, 136);
-        border: .25em solid var(--glow-color);
-        padding: 1em 3em;
-        color: var(--glow-color);
-        font-size: 15px;
-        font-weight: bold;
-        background-color: var(--btn-color);
-        border-radius: 1em;
-        outline: none;
-        box-shadow: 0 0 1em .25em var(--glow-color),
-        0 0 4em 1em var(--glow-spread-color),
-        inset 0 0 .75em .25em var(--glow-color);
-        text-shadow: 0 0 .5em var(--glow-color);
-        position: relative;
-        transition: all 0.3s;
-    }
+    <title>Регистрация</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        button {
+            --glow-color: rgb(217, 176, 255);
+            --glow-spread-color: rgba(191, 123, 255, 0.781);
+            --enhanced-glow-color: rgb(231, 206, 255);
+            --btn-color: rgb(100, 61, 136);
+            border: .25em solid var(--glow-color);
+            padding: 1em 3em;
+            color: var(--glow-color);
+            font-size: 15px;
+            font-weight: bold;
+            background-color: var(--btn-color);
+            border-radius: 1em;
+            outline: none;
+            box-shadow: 0 0 1em .25em var(--glow-color),
+            0 0 4em 1em var(--glow-spread-color),
+            inset 0 0 .75em .25em var(--glow-color);
+            text-shadow: 0 0 .5em var(--glow-color);
+            position: relative;
+            transition: all 0.3s;
+        }
 
-    button::after {
-        pointer-events: none;
-        content: "";
-        position: absolute;
-        top: 120%;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background-color: var(--glow-spread-color);
-        filter: blur(2em);
-        opacity: .7;
-        transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
-    }
+        button::after {
+            pointer-events: none;
+            content: "";
+            position: absolute;
+            top: 120%;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            background-color: var(--glow-spread-color);
+            filter: blur(2em);
+            opacity: .7;
+            transform: perspective(1.5em) rotateX(35deg) scale(1, .6);
+        }
 
-    button:hover {
-        color: var(--btn-color);
-        background-color: var(--glow-color);
-        box-shadow: 0 0 1em .25em var(--glow-color),
-        0 0 4em 2em var(--glow-spread-color),
-        inset 0 0 .75em .25em var(--glow-color);
-    }
+        button:hover {
+            color: var(--btn-color);
+            background-color: var(--glow-color);
+            box-shadow: 0 0 1em .25em var(--glow-color),
+            0 0 4em 2em var(--glow-spread-color),
+            inset 0 0 .75em .25em var(--glow-color);
+        }
 
-    button:active {
-        box-shadow: 0 0 0.6em .25em var(--glow-color),
-        0 0 2.5em 2em var(--glow-spread-color),
-        inset 0 0 .5em .25em var(--glow-color);
-    }
-    .regMain{
-        color: #4b0bab;
-    }
-</style>
+        button:active {
+            box-shadow: 0 0 0.6em .25em var(--glow-color),
+            0 0 2.5em 2em var(--glow-spread-color),
+            inset 0 0 .5em .25em var(--glow-color);
+        }
+
+        .regMain {
+            color: #4b0bab;
+        }
+
+        /* Добавленные стили для центрирования */
+        main.form-signin {
+            margin:  auto;
+            width: 55%; /* Ширина блока */
+            text-align: center; /* Центрирование текста */
+        }
+    </style>
 </head>
 
-        <body class="d-flex h-100 text-center text-bg-dark">
-    <header th:insert="block/header::header"> </header>
+<body class="d-flex h-100 text-center text-bg-dark">
+<header th:insert="block/header::header"> </header>
 
-
-    <main class="form-signin w-45 m-auto">
+<main class="form-signin">
     <br>
     <br>
     <br>
-        <h1 class="regMain" style="text-align: center" >Регистрация</h1>
-        <hr>
-        <form action="/welcome" method="post">
-            <div class="form-group">
-                <label for="name">Имя пользователя</label>
-                <input type="text" class="form-control" required id="name" name="name">
-            </div>
+    <h1 class="regMain">Регистрация</h1>
+    <hr>
+    <form action="/welcome" method="post">
+        <div class="form-group">
+            <label for="name">Имя пользователя</label>
+            <input type="text" class="form-control" required id="name" name="name">
+        </div>
 
+        <div class="form-group">
+            <label for="password">Пароль</label>
+            <input type="password" class="form-control" id="password" required name="password">
+        </div>
+        <br>
 
-            <div class="form-group">
-                <label for="password">Пароль</label>
-                <input type="password" class="form-control" id="password" required name="password">
-            </div>
-            <br>
+        <button type="submit">Зарегистрироваться</button>
+    </form>
+    <br> <br> <br>
+    <br> <br> <br>
+    <br> <br> <br>
+    <br> <br> <br>
+</main>
+<div th:insert="block/foter :: foter"></div>
+<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+</script>
+</body>
 
-            <button type="submit" >Зарегистрироваться</button>
-        </form>
-        <br>  <br>  <br>
-        <br>  <br>  <br>
-        <br>  <br>  <br>
-        <br>  <br>  <br>
-    </main>
-    <div th:insert="block/foter :: foter"></div>
-    <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-
-
-    </body>
-
-    </html>
+</html>
